# ToolDelta

./: .deepsource.toml  .gitignore  .gitlab-ci.yml  Dockerfile  DotCSLite.py  LICENSE  README.md  ToolDelta.cer  ToolDelta.pfx  ToolDelta.pvk  ToolDelta.py  ToolDelta.spc  ToolDelta_linux_install.sh  build_points.sh  buildin.sh  classic_plugin_updater_test.py  dotcs_linux.py  install.sh  lib.txt  main.py  neomega_files.json  plugin_load.py  py_test.py  py_tests.py  pyproject.toml  require_files.json  requirements.txt  setup.py  source.py  source.pyi  termux_install.sh  version  插件编写指南.md
.cert/: ToolDelta.cer  ToolDelta.pvk  ToolDelta.spc
.github/: auto_assign_configs.yml  install_docker_tooldelta.sh  release-drafter.yml  release_produce.py  template.sh
.github/ISSUE_TEMPLATE/: config.yml
.github/ISSUE_TEMPLATE /: bug_report.yml
.github/workflows/: ToolDeltaBuildandRelease.yml  auto-author-assign.yml  build.yml  build_and_release.yml  build_changelog.yml  check_dependencies.yml  check_poetry.yaml  check_pyproject_and_lock_file.yml  codeql.yml  create_release_note.yml  docker_build.yml  generate_directory_json.yml  main.yml  publish.yml  publish_python_package.yml  python-publish.yml  spellint.yml  sync_version.yml
.tools/: ToolDelta.pfx  ToolDelta.pvk
Demo Plugins/库-世界交互/: __init__.py
Demo Plugins/聊天栏菜单/: __init__.py
Demo Plugins/面板执行MCFB指令/: __init__.py
DotCS新版插件/: src.pyi
DotCS新版插件/五子棋/: __init__.py
DotCS新版插件/基本组件API/: __init__.py
DotCS新版插件/梗词/: __init__.py
DotCS新版插件/聊天栏菜单/: __init__.py
DotCS新版插件/面板执行MCFB指令/: __init__.py
DotCS新版插件/音乐播放器/: __init__.py
SuperServerLink-Plugins/: unfinished.py
ToolDelta/: __init__.py  basic_mods.py  builtins.py  cfg.py  color_print.py  get_python_libs.py  launch_cli.py  logger.py  neo_conn.py  plugin_load.py  sys_args.py  urlmethod.py  vscb.py
ToolDelta-SuperLink/: server_not_finished.py
ToolDelta/fb_conn/: fbconn.h
ToolDelta/neo_libs/: access.py  neo_conn.py  neomega_linux_amd64.so.tmp  neomega_windows_amd64.h  neomg_android_arm64.h
cert/: ToolDelta.cer  ToolDelta.pvk  ToolDelta.spc
demo_plugins/示例插件1/: __init__.py
demo_plugins/聊天栏菜单/: __init__.py
documents/: 插件编写指南-组合式插件.md  插件编写指南.md
documents/示例组合式插件1/: __init__.py
dotcs_libs/: basic_mods.py  color_print.py  conn.py  old_dotcs_env.py  packets.py  plugin_load.py
dotcs_libs/__pycache__/: no_pyc.py
libs/: basic_mods.py  builtins.py  cfg.py  color_print.py  conn.py  dotcs_conn.py  fbconn.py  get_python_libs.py  launch_cli.py  logger.py  mytest_color_print.py  neo_conn.py  old_dotcs_env.py  packets.py  plugDec.py  plugin_auth.py  plugin_load.py  rich_color_print.py  sys_args.py  urlmethod  urlmethod.py  vscb.py
libs/neo_libs/: neo_conn.py  neomega_android_arm64.h  neomega_windows_x86.h
plugin_market/: README.md  directory.json  get_directory.py  latest_versions.json  market_tree.json
plugin_market/32k盒子显示/: __init__.py
plugin_market/@玩家/: __init__.py
plugin_market/SuperSoundMixer/: __init__.py
plugin_market/oplist/: __init__.py
plugin_market/tpa传送/: __init__.py
plugin_market/五子棋小游戏/: __init__.py
plugin_market/井字棋/: __init__.py
plugin_market/前置-世界交互/: __init__.py
plugin_market/发言频率/: __init__.py
plugin_market/地图画导入/: __init__.py
plugin_market/基本插件功能库/: __init__.py
plugin_market/封禁系统/: __init__.py
plugin_market/库-世界交互/: __init__.py
plugin_market/死亡返回/: __init__.py
postscripts/: README.md
tooldelta/: Frame.py  __init__.py  auths.py  basic_mods.py  builtins.py  cfg.py  color_print.py  constants.py  fbconn.py  frame.py  game_texts.py  game_utils.py  get_python_libs.py  get_tool_delta_version.py  launch_cli.py  launch_options.py  logger.py  neo_conn.py  old_dotcs_env.py  packets.py  plugin_load.py  plugin_manager.py  plugin_market.py  start_tool_delta.py  starter.py  sys_args.py  urlmethod.py  utils.py  version.py  vscb.py
群互通/: __init__.py
(+203 files in other folders)
