[tool.poetry]
name = "Tooldelta"
version = "0.0.0" # This field is automatically set to the value in the version file
description = "Plugin Loader for NeteaseRentalServer on Panel"
authors = ["SuperScript-PRC"]
license = ""

readme = "README.md"
homepage = "https://github.com/SuperScript-PRC/ToolDelta"
repository = "https://github.com/SuperScript-PRC/ToolDelta"

# Please don't change this manually, your changes may invalidate other people's package management, use poetry to make changes!
[tool.poetry.dependencies]
python = ">=3.9,<3.13"
psutil = "5.9.8"
requests = "2.31.0"
nbt = "1.5.1"
qrcode = "7.4.2"
pymysql = "1.1.0"
websockets = "12.0"
ujson = "5.9.0"
rich = "13.7.0"
colorama = "^0.4.6"
pillow = "^10.2.0"
shellescape = "^3.8.1"
pyspeedtest = "1.2.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
